# cv_detector_ros2_bridge

./: CMakeLists.txt  LICENSE  README.md  package.xml
dep/: .gitignore  README.md
msg/: Detection.msg  DetectionsList.msg  Meta.msg  Rect.msg
src/: convert.cpp  convert.hpp  detections_list_client.cpp  detections_list_client.hpp  detections_list_generated.h  detections_ros2_bridge.cpp  message.hpp  sync_queue.hpp
